--- a/sentry/Cargo.toml
+++ b/sentry/Cargo.toml
@@ -47,7 +47,7 @@ tracing = ["sentry-tracing"]
 opentelemetry = ["sentry-opentelemetry"]
 # other features
 test = ["sentry-core/test"]
-release-health = ["sentry-core/release-health", "sentry-actix?/release-health"]
+release-health = ["sentry-core/release-health"]
 logs = ["sentry-core/logs", "sentry-tracing?/logs", "sentry-log?/logs"]
 # transports
 transport = ["reqwest", "native-tls"]
